apiGateway/envoy.yaml
static_resources:
  listeners:
  - name: listener_0
    address:
      # 直接让 Envoy 监听 8080 端口
      socket_address: { address: 0.0.0.0, port_value: 8080 } 
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_http
          route_config:
            name: local_route
            virtual_hosts:
            - name: local_service
              domains: ["*"]
              routes:
              - match: { prefix: "/" }
                route:
                  cluster: service_httpbin
                  host_rewrite_literal: www.httpbin.org
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: service_httpbin
    type: LOGICAL_DNS
    connect_timeout: 3s
    load_assignment:
      cluster_name: service_httpbin
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: www.httpbin.org
                port_value: 80
